--- a/website/templates/website/create_normal.html
+++ b/website/templates/website/create_normal.html
@@ -2,32 +2,29 @@
 {% block title %}Project Selection{% endblock %}
 {% block body %}
 <div class="container">
-    <div class="row"></div>
     <div class="row">
-        <div class="col-md-12">
-            {% if heading %}
-            <h3>{{heading}}</h3>
-            {% endif %}
+        <div class="col-xs-12">
+            <h3>Project Selection</h3>
             <form class="form-horizontal" method="POST" action="">
                 {% csrf_token %}
                 {% include 'website/messages.html' %}
-                <div class="row">
-                    <div class="col-md-2">
-                        <label>Selection</label>
+                <div class="row form-row">
+                    <div class="col-xs-2">
+                        <label>Input Dataset:</label>
                     </div>
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            {{p_form.as_p}}
+                    <div class="col-xs-4">
+                        <div class="form-inline">
+                            {{p_form}}
                         </div>
                     </div>
                 </div>
                 {{ formset.management_form }}
                 {% for form in formset %}
                 <div class="row form-row">
-                    <div class="col-md-2">
-                        <label>Filter</label>
+                    <div class="col-xs-2">
+                        <label>Filter:</label>
                     </div>
-                    <div class="col-4">
+                    <div class="col-xs-4">
                         <div class="form-inline">
                             {{form.pfilter}}
                             {{form.value}}
@@ -38,7 +35,7 @@
                 </div>
                 {% endfor %}
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-xs-4">
                         <button type="submit" class="btn btn-block btn-primary">Create</button>
                     </div>
                 </div>
