--- a/website/templates/website/funding.html
+++ b/website/templates/website/funding.html
@@ -14,10 +14,10 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <div class="col-xs-2">
+            <div class="col-xs-4 col-md-2">
                 <img src="https://www.nsf.gov/images/logos/nsf1.gif" class="img-responsive"/>
             </div>
-            <div class="col-xs-10">
+            <div class="col-xs-8 col-md-10">
                 <p>This project is partially supported by the U.S. National Science Foundation (NSF) under the following grants:</p>
                 <ul>
                     <li>CNS-18-23357: <a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=1823357">CRI: CI-P: Collaborative: Towards a Program Analysis Collaboratory</a>. PI: Elena Sherman (2018-2019)</li>
@@ -26,10 +26,10 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <div class="col-xs-2">
+            <div class="col-xs-4 col-md-2">
                 <img style="background-color: #ff6b00;" src="http://www.bgsu.edu/etc/designs/bgsu-edu/clientlibs/images/logo.png" class="img-responsive"/>
             </div>
-            <div class="col-xs-10">
+            <div class="col-xs-8 col-md-10">
                 <p>The prototype infrastructure is supported by a generous startup grant provided by Bowling Green State University to Dr. Robert Dyer.</p>
             </div>
         </div>
