--- a/website/templates/website/person.html
+++ b/website/templates/website/person.html
@@ -1,12 +1,12 @@
 <div class="row">
-    <div class="col-xs-2">
+    <div class="col-xs-4 col-md-2">
         <img src="{{ person.profile.photo.url }}" class="img-fluid img-thumbnail"/>
     </div>
-    <div class="col-xs-8">
+    <div class="col-xs-8 col-md-10">
         <h2>{% if person.profile.isDoctor %}{{ person.profile.surname }} {% endif %}{{ person.first_name }} {{ person.last_name }}</h2>
         <h4>Contact: {{ person.email }}</h4>
     </div>
-    <div class="col-xs-8">
+    <div class="col-xs-8 col-md-10">
         <p>{{ person.profile.bio }}</p>
     </div>
 </div><br><br>
