--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -1,4 +1,4 @@
-{% extends 'website/layout.html' %}
+{% extends 'website/base.html' %}
 {% block title %}Projects{% endblock %}
 {% block projectsactive %}active{% endblock %}
 {% block body %}
