--- a/website/templates/website/projectsDetail.html
+++ b/website/templates/website/projectsDetail.html
@@ -1,4 +1,4 @@
-{% extends 'website/layout.html' %}
+{% extends 'website/base.html' %}
 {% block title %}Project Detail{% endblock %}
 {% block body %}
     <div class="container">
