--- a/website/templates/website/delete.html
+++ b/website/templates/website/delete.html
@@ -1,4 +1,4 @@
-{% extends 'website/layout.html' %}
+{% extends 'website/base.html' %}
 {% block body %}
 <div class="container">
     {% include 'website/messages.html' %}
