--- a/website/templates/website/projectsDetail.html
+++ b/website/templates/website/projectsDetail.html
@@ -28,7 +28,7 @@
     <script src="{% static 'website/jquery.tagsinput.js' %}"></script>
     <script>
         $('input:eq(1)').tagsInput({
-            autocomplete_url: 'http://127.0.0.1:8000/ajax/search'
+            autocomplete_url: '/api/usernames/'
         });
     </script>
     {% endblock %}
