--- a/website/templates/website/create_normal.html
+++ b/website/templates/website/create_normal.html
@@ -8,11 +8,11 @@
             <form class="form-horizontal" method="POST" action="">
                 {% csrf_token %}
                 {% include 'website/messages.html' %}
-                <div class="row form-row">
-                    <div class="col-xs-2">
-                        <label>Input Dataset:</label>
+                    <div class="row">
+                    <div class="col-xs-2 col-sm-4">
+                        <label class="pull-right">Input Dataset:</label>
                     </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-10 col-sm-8">
                         <div class="form-inline">
                             {{p_form}}
                         </div>
@@ -21,25 +21,25 @@
                 {{ formset.management_form }}
                 {% for form in formset %}
                 <div class="row form-row">
-                    <div class="col-xs-2">
-                        <label>Filter:</label>
+                    <div class="col-xs-2 col-sm-4">
+                        <label class="pull-right">Filter:</label>
                     </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-10 col-sm-8">
                         <div class="form-inline">
                             {{form.pfilter}}
                             {{form.value}}
                             <button class="btn btn-success add-form-row">+</button>
                         </div>
                     </div>
-                    <br>
+                    <br><br>
                 </div>
                 {% endfor %}
                 <div class="row">
                     <div class="col-xs-4">
-                        <button type="submit" class="btn btn-block btn-primary">Create</button>
+                        <button type="submit" class="btn btn-primary pull-right">Create</button>
                     </div>
                 </div>
-            </form>
+            </form><br>
         </div>
     </div>
 </div>
