--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -17,19 +17,21 @@
                     <p style="padding-left: 2%;"><strong>Filter Default Value: </strong>{{ filter.default_val }}</p>
                     <br>
                 {% endfor %}
-                <div class="panel panel-warning">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Share this project selection</h3>
+                {% if user.profile.active_email %}
+                    <div class="panel panel-warning">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Share this project selection</h3>
+                        </div>
+                        <div class="panel-body">
+                            <p>Enter a PAClab username or email address to share this project selection.</p>
+                            <form action="" method="POST" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                {% include 'website/form.html' with form=form %}
+                                <button class="btn btn-primary">Share</button>
+                            </form>
+                        </div>
                     </div>
-                    <div class="panel-body">
-                        <p>Enter a PAClab username or email address to share this project selection.</p>
-                        <form action="" method="POST" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            {% include 'website/form.html' with form=form %}
-                            <button class="btn btn-primary">Share</button>
-                        </form>
-                    </div>
-                </div>
+                {% endif %}
             </div>
         </div>
     </div>
