--- a/website/templates/website/project_selection_email.html
+++ b/website/templates/website/project_selection_email.html
@@ -1,1 +1,1 @@
-<p>{{ user }} has shared a project with you at <a href="{{ url }}">here.</a></p>
+<p>{{ user }} has shared a <a href="{{ url }}">project selection</a> with you on PAClab.</p>
