--- a/website/templates/website/people.html
+++ b/website/templates/website/people.html
@@ -18,5 +18,6 @@
             {% include 'website/person.html' %}
             {% endif %}
         {% endfor %}
+        {% include 'website/pagination.html' %}
     </div>
 {% endblock %}
