--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -31,6 +31,11 @@ body {
     margin-bottom: 0;
 }
 
+/* try to disable links if they are disabled */
+.disabled {
+    pointer-events: none;
+}
+
 /* for dragging modal dialogs */
 .modal.fade.ui-draggable-dragging {
     -moz-transition: none;
