--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -40,5 +40,6 @@
                 </tbody>
             </table>
         </div>
+        {% include 'website/pagination.html' %}
     </div>
 {% endblock %}
