--- a/website/templates/website/create_normal.html
+++ b/website/templates/website/create_normal.html
@@ -46,7 +46,7 @@
 {% endblock %}
 
 {% block script %}
-<script type="text/javascript">
+<script>
 function updateElementIndex(el, prefix, ndx) {
     var id_regex = new RegExp('(' + prefix + '-\\d+)');
     var replacement = prefix + '-' + ndx;
