--- a/website/templates/website/funding.html
+++ b/website/templates/website/funding.html
@@ -15,7 +15,7 @@
         </div>
         <div class="row top-buffer">
             <div class="col-xs-4 col-md-2">
-                <img src="https://www.nsf.gov/images/logos/nsf1.gif" class="img-responsive"/>
+                <img alt="NSF logo" src="https://www.nsf.gov/images/logos/nsf1.gif" class="img-responsive"/>
             </div>
             <div class="col-xs-8 col-md-10">
                 <p>This project is partially supported by the U.S. National Science Foundation (NSF) under the following grants:</p>
@@ -27,7 +27,7 @@
         </div>
         <div class="row top-buffer">
             <div class="col-xs-4 col-md-2">
-                <img style="background-color: #ff6b00;" src="http://www.bgsu.edu/etc/designs/bgsu-edu/clientlibs/images/logo.png" class="img-responsive"/>
+                <img alt="BGSU logo" style="background-color: #ff6b00;" src="http://www.bgsu.edu/etc/designs/bgsu-edu/clientlibs/images/logo.png" class="img-responsive"/>
             </div>
             <div class="col-xs-8 col-md-10">
                 <p>The prototype infrastructure is supported by a generous startup grant provided by Bowling Green State University to Dr. Robert Dyer.</p>
