--- a/website/templates/website/person.html
+++ b/website/templates/website/person.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-4 col-md-2">
-        <img src="{{ person.profile.photo.url }}" class="img-fluid img-thumbnail"/>
+        <img alt="Profile photo for {{ person.first_name}} {{ person.last_name }}" src="{{ person.profile.photo.url }}" class="img-fluid img-thumbnail"/>
     </div>
     <div class="col-xs-8 col-md-10">
         <h2>{{ person.profile.honorific }} {{ person.first_name }} {{ person.last_name }}</h2>
