remove empty action attribute from form tags

--- a/website/templates/website/addFilter.html
+++ b/website/templates/website/addFilter.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="panel panel-default">
             <div class="panel-body">
-                <form class="form form-default" action="" method="post" enctype="multipart/form-data">
+                <form class="form form-default" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% if messages %}
                         <ul class="messages">
