--- a/website/templates/website/create_normal.html
+++ b/website/templates/website/create_normal.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-xs-12">
             <h3>Project Selection</h3>
-            <form class="form-horizontal" method="POST" action="">
+            <form class="form-horizontal" method="POST">
                 {% csrf_token %}
                 {% include 'website/messages.html' %}
                     <div class="row">
