--- a/website/templates/website/reset/passwordReset.html
+++ b/website/templates/website/reset/passwordReset.html
@@ -5,7 +5,7 @@
     <div class="container-fluid">
         <div class="panel panel-default">
             <div class="panel-body">
-                <form class="form form-default" action="" method="post" enctype="multipart/form-data">
+                <form class="form form-default" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% include 'website/messages.html' %}
                     {% include 'website/form.html' with form=form %}
