add img alt tags

--- a/website/templates/website/editprofile.html
+++ b/website/templates/website/editprofile.html
@@ -136,7 +136,7 @@
                     </div>
                     <div class="modal-body">
                         <div>
-                            <img src="" id="image" style="max-width: 100%;">
+                            <img alt="photo to crop" id="image" style="max-width: 100%;">
                         </div>
                     </div>
                     <div class="modal-footer">
