help text should use small class, not small tag

--- a/website/templates/website/form.html
+++ b/website/templates/website/form.html
@@ -34,7 +34,7 @@
     {% endif %}
 
     {% if field.help_text %}
-        <small class="help-block">{{ field.help_text }}</small>
+        <div class="help-block small">{{ field.help_text }}</div>
     {% endif %}
     </div>
 {% endfor %}
