--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-default">
         <!--Main Buttons-->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar" aria-controls="topNavBar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
