Rename 'processed' field to 'status'

--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -5,7 +5,7 @@
     <div class="container">
         {% include 'website/messages.html' %}
         <a href="{% url 'website:project_list' %}">Back to all project selections</a><br><br>
-        {% if project.processed != 'PROCESSED' %}
+        {% if project.status != 'PROCESSED' %}
             <div class="alert alert-warning">This selector is still processing</div>
         {% endif %}
         <div class="panel panel-primary">
