--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -36,7 +36,7 @@
                 <tbody>
                     {% for project in projects %}
                         <tr>
-                            <td>{% if project.processed != 'PROCESSED' %}<span class="glyphicon glyphicon-refresh spinning"></span> {% endif %}<a href="{% url 'website:project_detail' slug=project.slug %}">{{ project.slug }}</a></td>
+                            <td>{% if project.status != 'PROCESSED' %}<span class="glyphicon glyphicon-refresh spinning"></span> {% endif %}<a href="{% url 'website:project_detail' slug=project.slug %}">{{ project.slug }}</a></td>
                             <td>{{ project.created }}</td>
                             <td>
                                 <p>
