--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -15,6 +15,8 @@
             <div class="panel-body">
                 <h4><strong>Input Dataset:</strong> {{ project.input_dataset }}</h4>
                 <h4><strong>Projects Matched:</strong> {{ project.project.all|length }}</h4>
+                <h4><strong>Project Submitted:</strong> {{ project.submitted }}</h4>
+                {% if project.status == 'PROCESSED' %}<h4><strong>Project Finished Processing:</strong>{{ project.fin_process }}</h4>{% endif %}
                 <br>
                 {% for filter in values %}
                     <h4><strong>{{ filter.pfilter }}:</strong></h4>
