Alert for deletion appears on list page

--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -22,6 +22,7 @@
 {% endblock %}
 {% block body %}
     <div class="container-fluid" style="width: 80%">
+        {% include 'website/messages.html' %}
         <h1>Project Selections</h1>
         <div class="table-responsive">
             <table class="table table-hover table-striped">
