simply disable delete button if already deleted

--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -47,10 +47,8 @@
                             </td>
                             <td>
                                 <a href="{% url 'website:project_detail' slug=project.slug %}" class="btn btn-primary">View</a>
-                                <a href="{% url 'website:project_delete' slug=project.slug %}" class="btn btn-danger">Delete</a>
-                            </td>
-                            <td>
-                                {% if not project.enabled %}<span class="glyphicon glyphicon-remove"></span>{% endif %} 
+                                {% if project.enabled %}
+                                <a href="{% url 'website:project_delete' slug=project.slug %}" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}>Delete</a>
                             </td>
                         </tr>
                     {% empty%}
