--- a/website/templates/website/funding.html
+++ b/website/templates/website/funding.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <div class="col-xs-4 col-md-2">
+            <div class="col-xs-4 col-md-2" align="center">
                 <img alt="NSF logo" src="https://www.nsf.gov/images/logos/nsf1.gif" class="img-responsive"/>
             </div>
             <div class="col-xs-8 col-md-10">
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <div class="col-xs-4 col-md-2">
+            <div class="col-xs-4 col-md-2" align="center">
                 <img alt="BGSU logo" style="background-color: #ff6b00;" src="http://www.bgsu.edu/etc/designs/bgsu-edu/clientlibs/images/logo.png" class="img-responsive"/>
             </div>
             <div class="col-xs-8 col-md-10">
