--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -13,10 +13,10 @@
                 <h4><strong>Input Dataset:</strong> {{ project.input_dataset }}</h4>
                 <br>
                 <a href="{% url 'website:download' project.slug %}">Download results</a>
-                <!-- {% for filter in values %}
+                {% for filter in values %}
                     <h4><strong>{{ filter.pfilter }}:</strong></h4>
                     <p>{{ filter }}</p>
-                {% endfor %} -->
+                {% endfor %}
                 {% if user.profile.active_email %}
                     <br>
                     <div class="panel panel-warning">
