--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -1,5 +1,6 @@
 {% extends 'website/base.html' %}
 {% load calc_cloned_projects %}
+{% load check_transformer %}
 {% block title %}Project Selections{% endblock %}
 {% block projectsactive %}active{% endblock %}
 {% block style %}
@@ -38,7 +39,7 @@
                 <tbody>
                     {% for project in projects %}
                         <tr>
-                            <td>{% if project.status != 'PROCESSED' %}<span class="glyphicon glyphicon-refresh spinning"></span> {% endif %}<a href="{% url 'website:project_detail' slug=project.slug %}">{{ project.slug }}</a></td>
+                            <td>{% if project.projecttransformer_set.first.status != 'PROCESSED' %}<span class="glyphicon glyphicon-refresh spinning"></span> {% endif %}<a href="{% url 'website:project_detail' slug=project.slug %}">{{ project.slug }}</a></td>
                             <td>{{ project.created }}</td>
                             <td>
                                 <p>
