--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -21,6 +21,7 @@
                 {% endif %}
                 <br/>
                 <h4><strong>Candidate Projects:</strong> {{ project.project.all|length }}</h4>
+                <h4><strong>Projects Cloned:</strong> {{ cloned }}</h4>
                 <br/>
                 {% for filter in values %}
                     <h4><strong>{{ filter.pfilter }}:</strong></h4>
