--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -30,7 +30,7 @@
                     <tr>
                         <th>Project Selection</th>
                         <th>Created</th>
-                        <th>Transformed Project Number</th>
+                        <th># Projects Transformed</th>
                         <th>Options</th>
                     </tr>
                 </thead>
@@ -38,13 +38,13 @@
                 <tbody>
                     {% for project in projects %}
                         <tr>
-                            <td>{% if project.projecttransformer_set.first.status != 'PROCESSED' %}<span class="glyphicon glyphicon-refresh spinning"></span> {% endif %}<a href="{% url 'website:project_detail' slug=project.slug %}">{{ project.slug }}</a></td>
+                            <td><a href="{% url 'website:project_detail' slug=project.slug %}">{{ project.slug }}</a></td>
                             <td>{{ project.created }}</td>
-                            <td>
-                                <p>
-                                    {{ project|calc_finished_projects }}
-                                </p>
-                            </td>
+                            <td>{% if project.projecttransformer_set.first.status != 'PROCESSED' %}
+                                <span class="glyphicon glyphicon-refresh spinning"></span> processing...
+                            {% else %}
+                                {{ project|calc_finished_projects }}
+                            {% endif %}</td>
                             <td>
                                 <a href="{% url 'website:project_detail' slug=project.slug %}" class="btn btn-primary">View</a>
                                 <a href="{% url 'website:project_delete' slug=project.slug %}" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}>Delete</a>
