--- a/website/templates/website/projects.html
+++ b/website/templates/website/projects.html
@@ -40,7 +40,7 @@
                         <tr>
                             <td><a href="{% url 'website:project_detail' slug=project.slug %}">{{ project.slug }}</a></td>
                             <td>{{ project.created }}</td>
-                            <td>{% if project.projecttransformer_set.first.status != 'PROCESSED' %}
+                            <td>{% if project.status != 'PROCESSED' %}
                                 <span class="glyphicon glyphicon-refresh spinning"></span> processing...
                             {% else %}
                                 {{ project|calc_finished_projects }}
